updates for putt domain

--- a/public/game.html
+++ b/public/game.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta property="og:title" content="Pocket Mini Golf" />
+    <meta property="og:description" content="Use your phone as a golf club to play mini golf!" />
+    <meta property="og:image" content="https://putt.futurepr0n.com/images/golf-preview.jpg" />
+    <meta property="og:url" content="https://putt.futurepr0n.com" />
+    
   <title>Pocket Mini Golf</title>
   <style>
     body { 
