trying a fix, but may revert

--- a/public/game.html
+++ b/public/game.html
@@ -157,10 +157,14 @@
     <div style="margin-top: 20px;">Please wait</div>
   </div>
   
+  <!-- Preload all required scripts to ensure they're available before game.js executes -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/examples/js/controls/OrbitControls.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/examples/js/utils/BufferGeometryUtils.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/cannon.js/0.6.2/cannon.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.1/socket.io.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+  
   <script>
     // Simple function to hide loading overlay when game is ready
     window.addEventListener('load', function() {
